[package]
name = "rusty-firebell"
version = "0.1.0"
authors = ["Eduard Stefes <eduard.stefes@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-device = { version = "*", features = ["atmega328pb", "rt"]}
panic-halt = "0.2.0"
embedded-hal = "*"
nb = "*"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
